gobmkida/c1/test_eyeshape
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/test_eyeshape/src/engine/optics.c:2415:27: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v8 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v7); 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/test_eyeshape/src/engine/optics.c:2436:28: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v11 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v10); 
                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/test_eyeshape/src/obj/1/optics.o] Error 1
